--- a/.github/workflows/speakeasy_sdk_publish.yml
+++ b/.github/workflows/speakeasy_sdk_publish.yml
@@ -1,15 +1,15 @@
-name: Publish
+name: Publish Go SDK
 
 on:
   push: # Will trigger when the RELEASES.md file is updated by the merged PR from the generation workflow
     paths:
-      - "RELEASES.md"
+      - "./sdks/go/RELEASES.md"
     branches:
       - main
 
 jobs:
   publish:
-    uses: speakeasy-api/sdk-generation-action/.github/workflows/sdk-publish.yaml@v7 # Import the sdk publish workflow which will handle the publishing to the package managers
+    uses: speakeasy-api/sdk-generation-action/.github/workflows/sdk-publish.yaml@v14 # Import the sdk publish workflow which will handle the publishing to the package managers
     with:
       create_release: true
     secrets:
