--- a/gen.yaml
+++ b/gen.yaml
@@ -1,4 +1,9 @@
+configVersion: 1.0.0
+generation:
+  telemetryEnabled: false
+  sdkClassName: speakeasy
+  sdkFlattening: true
+  singleOpPerTag: true
 go:
-    version: 0.0.0
-    packagename: github.com/speakeasy-sdks/company-laguage-sdk
-sdkclassname: companyname
+  version: 0.6.0
+  packageName: github.com/codatio/client-sdk-go/accounting
