--- a/.github/workflows/speakeasy_sdk_generation.yml
+++ b/.github/workflows/speakeasy_sdk_generation.yml
@@ -1,5 +1,11 @@
 name: Generate Go SDK
 
+permissions:
+  checks: write
+  contents: write
+  pull-requests: write
+  statuses: write
+
 on:
   workflow_dispatch: # Allows manual triggering of the workflow to generate SDK
     inputs:
