--- a/.github/workflows/speakeasy_sdk_generation.yml
+++ b/.github/workflows/speakeasy_sdk_generation.yml
@@ -1,4 +1,4 @@
-name: Generate Go SDK
+name: Generation
 
 permissions:
   checks: write
@@ -21,9 +21,10 @@ jobs:
     uses: speakeasy-api/sdk-generation-action/.github/workflows/sdk-generation.yaml@v14 # Import the sdk generation workflow which will handle the generation of the SDKs and publishing to the package managers in 'direct' mode.
     with:
       speakeasy_version: latest
-      openapi_doc_location: ./openapi.yaml
+      openapi_docs: |
+        - location: ./openapi/openapi.yaml
       languages: |-
-        - go: ./sdks/go
+        - typescript
       mode: pr
       force: ${{ github.event.inputs.force }}
     secrets:
