--- a/.github/workflows/speakeasy_spec_suggestions.yml
+++ b/.github/workflows/speakeasy_spec_suggestions.yml
@@ -14,7 +14,7 @@ jobs:
     with:
       speakeasy_version: latest
       openapi_docs: |
-        - .openapi.yaml
+        - ./openapi.yaml
       openapi_doc_output: ./openapi.yaml
       max_suggestions: 5
     secrets:
