--- a/.github/workflows/speakeasy_spec_suggestions.yml
+++ b/.github/workflows/speakeasy_spec_suggestions.yml
@@ -1,16 +1,11 @@
 name: Suggest
 
 on:
-  workflow_dispatch: # Allows manual triggering of the workflow to suggest OpenAPI document
-    inputs:
-      force:
-        description: "Force suggestion of OpenAPI document"
-        type: boolean
-        default: false
+  workflow_dispatch: {} # Allows manual triggering of the workflow to suggest OpenAPI document
 
 jobs:
   suggest:
-    uses: speakeasy-api/sdk-generation-action/.github/workflows/sdk-suggestion.yaml@v14.25 # Import the sdk generation workflow which will handle the generation of the SDKs and publishing to the package managers in 'direct' mode.
+    uses: speakeasy-api/sdk-generation-action/.github/workflows/sdk-suggestion.yaml@v14 # Import the sdk generation workflow which will handle the generation of the SDKs and publishing to the package managers in 'direct' mode.
     with:
       speakeasy_version: latest
       openapi_docs: |
